# ferric_forager

./: .gitignore  CLAUDE.md  START_HERE.yaml
.GOV/: codex.yaml  id-registry.yaml  topology.yaml
.GOV/archive/work_packets/: .gitkeep
.GOV/reviews/peer-review-v0.2.0/: architecture-performance-review.md  compatibility-product-review.md  implementation-readiness-matrix.json  primary-synthesis.md  review-charter.json  security-reliability-review.md
.GOV/rules/: build-rules.yaml
.GOV/spec/: ferric_forager_technical_design_v0.2.0.md  ferric_forager_technical_design_v0.3.0.md
.GOV/taskboard/: taskboard.yaml
.GOV/templates/: WORK_PACKET_CONTRACT_TEMPLATE.json  WORK_PACKET_REQUIREMENTS.yaml
.GOV/work_packets/: .gitkeep
.GOV/work_packets/WP-FF-001-governance-workflow-v1/: packet.json
.GOV/work_packets/WP-FF-002-architecture-review-merge-v1/: packet.json  refinement.json
.GOV/work_packets/WP-FF-003-executable-gate-bootstrap-v1/: packet.json  refinement.json
.GOV/work_packets/WP-FF-003-executable-gate-bootstrap-v2/: packet.json  refinement.json
.GOV/work_packets/WP-FF-004-compatibility-inventory-corpus-v1/: packet.json  refinement.json
.GOV/work_packets/WP-FF-004-compatibility-inventory-corpus-v2/: packet.json  refinement.json
.GOV/work_packets/WP-FF-005-versioned-core-contracts-v1/: packet.json  refinement.json
.GOV/work_packets/WP-FF-006-rust-youtube-challenge-spike-v1/: packet.json
.GOV/work_packets/WP-FF-007-transport-fingerprint-spike-v1/: packet.json
.GOV/work_packets/WP-FF-008-archive-store-evidence-v1/: packet.json
.GOV/work_packets/WP-FF-009-resource-durability-models-v1/: packet.json
.GOV/work_packets/WP-FF-010-ffmpeg-supervision-spike-v1/: packet.json
.GOV/work_packets/WP-FF-011-equivalent-work-vertical-slice-v1/: packet.json
product/: MODEL_MANUAL.md  clippy.toml
product/crates/fforager-contracts/: Cargo.toml
product/crates/fforager-contracts/src/: framing.rs  graph.rs  identity.rs  lib.rs  protocol.rs  storage.rs
product/crates/fforager-core/: Cargo.toml
product/crates/fforager-core/src/: lib.rs  lifecycle.rs  resource.rs
product/crates/fforager-diagnostics-contract/: Cargo.toml  README.md
product/crates/fforager-diagnostics-contract/src/: envelope.rs  error.rs  event.rs  ids.rs  lib.rs  lifecycle.rs  protocol.rs
product/crates/fforager-diagnostics-contract/tests/: contract.rs
product/watcher/: .gitkeep
(+6 files in other folders)
