[package]
name = "fforager-contracts"
version = "0.1.0"
workspace = "../../../build"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
disallowed_types = "forbid"
disallowed_methods = "forbid"
disallowed_macros = "forbid"
