[package]
name = "fforager-diagnostics-contract"
version = "0.1.0"
workspace = "../../../build"
edition = "2024"
rust-version = "1.97.1"
license = "MIT OR Apache-2.0"
publish = false
description = "Bounded, versioned diagnostic wire contracts for Ferric Forager"

[dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"

[lints]
workspace = true
